Add sparkle emoji to homepage

--- a/templates/form.html
+++ b/templates/form.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 <form action="{{ url_for('markup') }}" method="post" id="form">
-    <label for="code"><h1>What code do you want formatted?</h1></label>
+    <label for="code"><h1>What code do you want to sparkle? ✨</h1></label>
     <textarea id="code" name="code"></textarea>
     <input type="submit" value="Submit">
 </form>
