--- a/templates/twinkle_smart.css
+++ b/templates/twinkle_smart.css
@@ -9,7 +9,7 @@ body {
     font-size: 16px;
 }
 @media only screen and (max-device-width: 480px) {
-    body {
+    html {
         font-size: 28px;
     }
 }
