--- a/templates/form.html
+++ b/templates/form.html
@@ -41,6 +41,7 @@
             color: #f6f3e8;
         }
     </style>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
 <form action="{{ url_for('markup') }}" method="post" id="form">
