--- a/templates/form.html
+++ b/templates/form.html
@@ -3,44 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Twinkler</title>
-    <style>
-        textarea {
-            margin: 0.4em 0;
-            width: 80%;
-            background-color: #303030;
-            color: #f6f3e8;
-            flex-grow: 1;
-        }
-        body {
-            background-color: #303030;
-            color: #f6f3e8;
-        }
-        html, body {
-            margin: 0;
-            padding: 0;
-            font-size: 28px;
-        }
-        form {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100vh;
-            padding: 0 0 0.5em 0;
-            box-sizing: border-box;
-        }
-        h1 {
-            margin-bottom: 0.1em;
-            margin-top: 0.2em;
-        }
-        p {
-            margin-top: 0;
-            font-size: 0.5em;
-        }
-        a, a:visited {
-            color: #f6f3e8;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='home.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
