--- a/static/home.css
+++ b/static/home.css
@@ -36,6 +36,11 @@ p {
     margin-top: 0;
     font-size: 0.5em;
 }
+@media only screen and (max-device-width: 480px) {
+    html {
+        font-size: 1em;
+    }
+}
 
 a, a:visited {
     color: #f6f3e8;
