--- a/templates/twinkle_smart.css
+++ b/templates/twinkle_smart.css
@@ -9,8 +9,8 @@ body {
     font-size: 16px;
 }
 @media only screen and (max-device-width: 480px) {
-    html {
-        font-size: 28px;
+    body {
+        -webkit-text-size-adjust: 100%;
     }
 }
 div.highlight {
