Remove httpS from metadata as this is still a Heroku free-tier app

--- a/templates/form.html
+++ b/templates/form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Twinkler</title>
-    {% set base_url = "https://twinkler.lord.geek.nz" %}
+    {% set base_url = "http://twinkler.lord.geek.nz" %}
     {% set social_title = "Twinkler" %}
     {% set social_description = "Festive code highlighting." %}
     {% set thumbnail_url = base_url ~ url_for('static', filename='thumbnail.png') %}
