Non-awful iPhone version

--- a/static/home.css
+++ b/static/home.css
@@ -1,23 +1,11 @@
-textarea {
-    margin: 0.4em 0;
-    width: 80%;
-    background-color: #303030;
-    color: #f6f3e8;
-    flex-grow: 1;
-}
-textarea::placeholder {
-    font-size: 2em;
-}
-
-body {
-    background-color: #303030;
-    color: #f6f3e8;
-}
-
 html, body {
     margin: 0;
     padding: 0;
     font-size: 28px;
+}
+body {
+    background-color: #303030;
+    color: #f6f3e8;
 }
 
 form {
@@ -29,22 +17,60 @@ form {
     padding: 0 0 0.5em 0;
     box-sizing: border-box;
 }
+textarea {
+    margin: 0.4em 0;
+    width: 85%;
+    background-color: #303030;
+    color: #f6f3e8;
+    flex-grow: 1;
+}
+textarea::placeholder {
+    font-size: 1rem;
+}
+input[type="submit"] {
+    font-size: 0.7rem;
+    margin-top: 0.5rem;
+}
 
 h1 {
     margin-bottom: 0.1em;
     margin-top: 0.2em;
+    padding-inline: 0.2rem;
 }
 
 p {
     margin-top: 0;
-    font-size: 0.5em;
-}
-@media only screen and (max-device-width: 480px) {
-    html {
-        font-size: 1em;
-    }
+    font-size: 1rem;
+    padding-inline: 0.2rem;
 }
 
 a, a:visited {
     color: #f6f3e8;
+}
+
+/* mobile */
+@media only screen and (max-device-width: 850px) {
+    html {
+        font-size: 50px;
+    }
+    h1 {
+        font-size: 2rem;
+        padding-bottom: 0.4rem;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    p {
+        font-size: 1rem;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    textarea {
+        width: 90%;
+        margin: 0 auto;
+    }
+    textarea::placeholder {
+        font-size: 0.8rem;
+    }
 }
